# BabelcomicsR

./: .env  Cargo.toml  README.md  REQUIREMENTS.md  babelcomics.desktop  book.toml  diff.txt  migrate_thumbnails.py  tsf_proto_pendiente.md
.sqlx/: query-0bab7820227f7a1d9e50c92f7326fc51c597e35c78149374cf519f5376937860.json  query-3b637646d31d60b1c8966387123b725f073245b245ab34970594542d77dfdc31.json  query-3fa9d11b3c12770d98110bed205fd9b26c825ca839bca2ea583596d07b08fa46.json  query-406ebab9b802e50ea4e1d3566885faf5066268a5d4e2da8fbf09464be714e7c6.json  query-42b2df2d78bc29fda17355fb68b1ec59d1bf9469612c9426b9228a78a4e07393.json  query-5ad554a2c38463e127e99c8b69c5f1e0b9c61a5fb83ed4b1c0f4ce11608915b0.json  query-93e36b6f3019e43c5ec25fba7e3e415e3f8a2f6d97d255fba0c65f09a614c327.json  (+5 more)
core/: Cargo.toml
core/.sqlx/: query-15fc9b175830ea34a66c5d4ac7938a2447f8432d40648cae0661dca03cf30b31.json  query-161415f3b37432a053160e238ea7780f1300cd54518a7a417f870f56bda1fd9e.json  query-194fa20195df50b35c3563b3606508b6d8d4e92bea3ff357fd1bada8c31e2f98.json  query-29cf2af399f807ad77c525001048953b63712a2dc62c37cdc77d4a014984be21.json  query-3507120d6e14207639d75c851cfb0180a356a10ac68f1560a5fe6bc62335eada.json  query-35c47db7ff8638bb3f336e1d9418bd10ccd6d701d0236758a9dd7119e84035ee.json  query-43138b3ce40914dfe94eb26db36a726b45e4a9289fa530447f5202da9064c523.json  query-576b449cc31b9d811f33ad12c1032a0b1e49a89aa44fb94a181fabaa06cd84bd.json  query-584981a108e5ad0f95e72377a3fae45d8e8ac17c0e9ce4f15bbc640adb7ac89d.json  query-6895d3a9eec278cc4bd753f9366a5965ebf13793f6e4fa820524005bc03f5d3e.json  query-79969128852186d3b3c8eb8e42d0e982a15170b612d40c49816466db775f4b8f.json  query-821d4403df1a7cffa87f0bbe8136a5d2fef444f6e6576dd14c3115c95a22dcec.json  query-90117a242d02756f18e68ee6bd03d4fbdee9f1b98d1758bd0abfb24b17094353.json  query-90822b28b4830aedcd8c31a7ed7efd54b4783b34914d344cc5864017eadbbd0e.json  query-94fed6ff15653ecf627a6865619697114573c08298a2ebe1b3abab9288508c72.json  query-a9d2d16bb4288d08cca46c483dc07f84e1069208cbb7012199c1c6c321e29b17.json  query-ac3f38dc92d68b0dfc1a1d845d81df2efd16296f5e3d2d781045fcd54bed87d4.json  query-baf0fdd2a36e56c077a2f065298ece6ae20835d4a335fc13cdedc254ee2bbb2d.json  query-cce9d506ba18ec67d9e89b6e54415a99f52f54a31500fc222102fcb3756c753b.json  query-f1db3ec83acffa1a832cab16f70992088fc9caa58e1f43ed1268189dd45d63e8.json  query-f24747c13aa323d9613538c0eb8a3dd906e45bb21c05a16a99d071b49392e035.json
core/migrations/: 0001_initial.sql  0004_add_procesado_column.sql  0006_add_comicbooks_detail.sql  0009_add_clip_embedding.sql  0011_add_local_to_volumens.sql  0012_add_reader_filter.sql  0013_add_catalog_match_metrics.sql
core/src/: lib.rs
core/src/helpers/: background_jobs.rs  clip_embedder.txt  comicvine_client.rs  download_manager.rs  extraction_registry.rs  extractor.rs  mod.rs  organizer.rs  publisher_import_service.rs  scan_service.rs  scanner.rs  suggestion_service.rs  thumbnail.rs
core/src/models/: comicbook.rs  comicbook_detail.rs  mod.rs  setup.rs  volume.rs
core/src/repositories/: comicbook_detail_repository.rs  comicbook_info_repository.rs  comicbook_repository.rs  mod.rs  setup_repository.rs  volume_repository.rs
migrations/: 0002_add_carpeta_thumbnails.sql  (+5 more)
(+58 files in other folders)
