[workspace]
members = ["core"]
resolver = "2"

[package]
name = "babelcomics"
version = "0.1.0"
edition = "2024"
default-run = "babelcomics"

[dependencies]
babelcomics-core = { path = "core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (SqlitePool type + sqlx::migrate! en migrador.rs)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Paralelismo (configuración del pool global en main.rs)
rayon = "1"

# Usados directamente en páginas de la UI
serde_json = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
reqwest = { version = "0.12", features = ["json"] }

# UI GTK4 + libadwaita
gtk4 = { version = "0.9", features = ["v4_16"] }
libadwaita = { version = "0.7", features = ["v1_6", "v1_7"] }
glib = "0.20"
gio = "0.20"
gdk-pixbuf = "0.20"
