[package]
name = "babelcomics-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"

# Crypto (API key encryption)
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Scanner / Extractor / Thumbnails
walkdir = "2"
zip = "2"
sevenz-rust = "0.6"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
rayon = "1"

# HTTP (ComicVine API)
reqwest = { version = "0.12", features = ["json", "cookies"] }
lazy_static = "1.5"
futures = "0.3"

# CLIP visual embeddings
candle-core         = { version = "0.9" }
candle-nn           = { version = "0.9" }
candle-transformers = { version = "0.9" }
hf-hub              = { version = "0.3" }
